--- a/packages/web/src/index.css
+++ b/packages/web/src/index.css
@@ -6,3 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+body, html, #root {
+  width: 100%;
+  height: 100%;
+}
