--- a/packages/web/src/index.css
+++ b/packages/web/src/index.css
@@ -11,3 +11,9 @@ body, html {
   width: 100%;
   height: 100%;
 }
+
+#root {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
